--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Welcome to the homepage of Mr-Xcoder's websites.
+<!DOCTYPE html>
+<html>
+<title>HTML Tutorial</title>
+<body>
+
+<p>Welcome to the homepage of Mr-Xcoder's websites.</p>
+
+</body>
+</html>
