--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <title>HTML Tutorial</title>
 <body>
 
-<p>Welcome to the homepage of Mr-Xcoder's websites.</p>
+  <ul>
+    <li><a href="https://github.com/Mr-Xcoder/physicsisfun.github.io">Physics is fun!</a></li>
+  </ul>
 
 </body>
 </html>
