--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>HTML Tutorial</title>
 <body>
 
-  <ul>
+  <ul style="margin:0 auto;">
     <li><a href="https://github.com/Mr-Xcoder/physicsisfun.github.io">Physics is fun!</a></li>
   </ul>
 
