--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>HTML Tutorial</title>
 <body>
 
-  <ul style="width: 10vw;margin-top:300px;margin:0 auto;">
+  <ul style="width: 10vw;margin:0 auto;">
     <li><a href="https://github.com/Mr-Xcoder/physicsisfun.github.io">Physics is fun!</a></li>
   </ul>
 
