--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
-<body>
-
-  <ul style="width: 10vw;margin:0 auto;">
-    <li><a href="https://github.com/Mr-Xcoder/physicsisfun.github.io">Physics is fun!</a></li>
-  </ul>
-
-</body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha1/katex.min.css" integrity="sha384-8QOKbPtTFvh/lMY0qPVbXj9hDh+v8US0pD//FcoYFst2lCIf0BmT58+Heqj0IGyx" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha1/katex.min.js" integrity="sha384-GR8SEkOO1rBN/jnOcQDFcFmwXAevSLx7/Io9Ps1rkxWp983ZIuUGfxivlF/5f5eJ" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8">
+    <title>Physics is Fun</title>
+    <style>
+	    #image {
+			text-align:center;
+			width:100%;
+			display:block;
+			margin:auto;
+	    }
+		a:link {
+    			color: green; 
+   			background-color: transparent; 
+    			text-decoration: none;
+		}
+		a:visited {
+   			color: green;
+    			background-color: transparent;
+    			text-decoration: none;
+		}
+		a:hover {
+    			color: red;
+    			background-color: transparent;
+   			text-decoration: none;
+		}
+		a:active {
+    			color: red;
+   			background-color: transparent;
+    			text-decoration: none;
+		}
+	</style>
+  </head>
+  <body style="color: white; background-color: #202020; font-family: Courier New;">
+  	<div style="width: 65vw; margin:0 auto; margin-top: 15vh;">
+    	<h2 id="top">Hi!</h2>
+        <p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
+  	</div>
+  </body>
 </html>
