--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha1/katex.min.js" integrity="sha384-GR8SEkOO1rBN/jnOcQDFcFmwXAevSLx7/Io9Ps1rkxWp983ZIuUGfxivlF/5f5eJ" crossorigin="anonymous"></script>
   <head>
     <meta charset="UTF-8">
-    <title>Physics is Fun</title>
+    <title>Mr. Xcoder's Realm</title>
     <style>
 	    #image {
 			text-align:center;
@@ -40,15 +40,15 @@
         <p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
         <h3>Programming</h3>
         <h4>Swift</h4>
-        <p>I was about 12 when I first started programming. The first language I have learnt is Swift, and I have been using that exlcusively for over a year. That taught me how to build iOS apps, my favoruite platform.</p>
+        <p>I was about 12 when I first started programming. The first language I have learnt is Swift, and I have been using that exclusively for over a year. That taught me how to build apps for iOS, my favoruite platform.</p>
         <h4>Python</h4>
         <p>Then I discovered Python, which is (in my opinion) a great programming language, with a lot of useful features and built-ins. Another advantage of Python is that it's easy to use, the community of Python developers is huge, and its documentation is very well-built.</p>
         <h4>C / C++</h4>
-        <p>I have been forced to learn C++ in school, and although I find it incredibly boring and primitive, it has helped me improve when it comes to algorithm construction. When it comes to C, I think it is a nice language that is very good for large computations and for fast code.</p>
+        <p>I have been forced to learn C++ in school, and although I find it incredibly boring and primitive, it has helped me improve when it comes to algorithm construction.  C, on the other hand, is IMO a nice language that is very good for large computations and for fast code.</p>
         <h4>Esolangs</h4>
-        <p>I know quite a few of these... Jelly, 05AB1E, Pyth, Pyke, Gaia, Husk, Enlist and many more! I currently aim to learn Brachylog or Japt.</p>
+        <p>I know quite a few of these... Jelly, 05AB1E, Pyth, Pyke, Gaia, Husk, Enlist and many more! I currently aim to learn Brachylog or Japt. You can see my work with esolangs on PPCG.</p>
         <h3>Physics</h3>
-        Physics is my main passion. Ever since I was a small kid I liked discovering the misteries of the world around me. I loved staring at the night sky and reading about planets and stars and stuff like that. Nowadays, I am constantly competing at the Physics Olympiads and Contests hosted in my country, and I have gathered some good results throught the years. I'll describe them succintly: #1 at the Local Olympiad in Grade 6, the "Procopiu" award at "Stefan Procopiu" National Contest (teams section), #1 at the County Olympiad in Grade 7, Honorable Mention at "Evrika" National Contest in Grade 7, Bronze Medal at the National Physics Olympiad in Grade 7, #3rd award at "Isaac Newton" National Contest and my latest achievement is #1 at the Local Olympiad in Grade 8 (last month, actually).
+        Physics is my main passion. Ever since I was a small kid I liked discovering the mysteries of the world around me. I loved staring at the night sky and reading about planets and stars and stuff like that. Nowadays, I am constantly competing at the Physics Olympiads and Contests hosted in my country, and I have gathered some good results throught the years. I'll describe them succintly: #1 at the Local Olympiad in Grade 6, the "Procopiu" award at "Stefan Procopiu" National Contest (teams section), #1 at the County Olympiad in Grade 7, Honorable Mention at "Evrika" National Contest in Grade 7, Bronze Medal at the National Physics Olympiad in Grade 7, #3rd award at "Isaac Newton" National Contest and my latest achievement is #1 at the Local Olympiad in Grade 8 (last month, actually).
   	</div>
   </body>
 </html>
