--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
         <h3>Programming</h3>
         <h4>Swift</h4>
-        <p>I was about 12 when I first started programming. The first language I have learnt is Swift, and I have been using that exclusively for over a year. That taught me how to build apps for iOS, my favoruite platform.</p>
+        <p>I was about 12 when I started programming. The first language I have learnt is Swift, and I have been using that exclusively for over a year. That taught me how to build apps for iOS, my favoruite platform.</p>
         <h4>Python</h4>
         <p>Then I discovered Python, which is (in my opinion) a great programming language, with a lot of useful features and built-ins. Another advantage of Python is that it's easy to use, the community of Python developers is huge, and its documentation is very well-built.</p>
         <h4>C / C++</h4>
