--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- some KaTeX for later on -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha1/katex.min.css" integrity="sha384-8QOKbPtTFvh/lMY0qPVbXj9hDh+v8US0pD//FcoYFst2lCIf0BmT58+Heqj0IGyx" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha1/katex.min.js" integrity="sha384-GR8SEkOO1rBN/jnOcQDFcFmwXAevSLx7/Io9Ps1rkxWp983ZIuUGfxivlF/5f5eJ" crossorigin="anonymous"></script>
   <head>
@@ -35,7 +36,7 @@
 	</style>
   </head>
   <body style="color: white; background-color: #202020; font-family: Courier New;">
-  	<div style="width: 60vw; margin:0 auto; margin-top: 15vh; padding-bottom: 15vh;">
+  	<div style="width: 60vw; margin:0 auto; margin-top: 15vh; padding-bottom: 15vh;" id="Container">
     	<h1 id="top">Hi!</h1>
         <p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
         <h2>Programming</h2>
@@ -50,5 +51,27 @@
         <h2>Physics</h2>
         Physics is my main passion. Ever since I was a small kid I liked discovering the mysteries of the world around me. I loved staring at the night sky and reading about planets and stars and stuff like that. Nowadays, I am constantly competing at the Physics Olympiads and Contests hosted in my country, and I have gathered some good results throught the years. I'll describe them succintly: #1 at the Local Olympiad in Grade 6, the "Procopiu" award at "Stefan Procopiu" National Contest (teams section), #1 at the County Olympiad in Grade 7, Honorable Mention at "Evrika" National Contest in Grade 7, Bronze Medal at the National Physics Olympiad in Grade 7, #3rd award at "Isaac Newton" National Contest and my latest achievement is #1 at the Local Olympiad in Grade 8 (last month, actually).
   	</div>
+    <script>
+    function appear(elm, i, step, speed){
+    	var t_o;
+    	i = i || 0;
+    	step = step || 5;
+    	speed = speed || 50; 
+		t_o = setInterval(function(){
+          	var opacity = i / 100;
+        	i = i + step; 
+        	if(opacity > 1 || opacity < 0){
+            	clearInterval(t_o);
+            	return; 
+        	}
+        	elm.style.opacity = opacity;
+        	elm.style.filter = 'alpha(opacity=' + opacity*100 + ')';
+    	}, speed);
+	}
+    
+    appear(document.getElementsByTagName('DIV')[0], 5, 5, 50);
+    </script>
   </body>
 </html>
+
+
