--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta charset="UTF-8">
     <title>Mr. Xcoder's Realm</title>
     <style>
-	    #image {
+	   	#image {
 			text-align:center;
 			width:100%;
 			display:block;
 			margin:auto;
-	    }
+	    	}
 		a:link {
     			color: green; 
    			background-color: transparent; 
@@ -37,20 +37,21 @@
   </head>
   <body style="color: white; background-color: #202020; font-family: Courier New;">
   	<div style="width: 60vw; margin:0 auto; margin-top: 15vh; padding-bottom: 15vh;" id="Container">
-    	<h1 id="top">Hi!</h1>
-        <p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
-        <h2>Programming</h2>
-        <h3>Swift</h3>
-        <p>I was about 12 when I started programming. The first language I have learnt is Swift, and I have been using that exclusively for over a year. That taught me how to build apps for iOS, my favoruite platform.</p>
-        <h3>Python</h3>
-        <p>Then I discovered Python, which is (in my opinion) a great programming language, with a lot of useful features and built-ins. Another advantage of Python is that it's easy to use, the community of Python developers is huge, and its documentation is very well-built.</p>
-        <h3>C / C++</h3>
-        <p>I have been forced to learn C++ in school, and although I find it incredibly boring and primitive, it has helped me improve when it comes to algorithm construction.  C, on the other hand, is IMO a nice language that is very good for large computations and for fast code.</p>
-        <h3>Esolangs</h3>
-        <p>I know quite a few of these... Jelly, 05AB1E, Pyth, Pyke, Gaia, Husk, Enlist and many more! I currently aim to learn Brachylog or Japt. You can see my work with esolangs on PPCG.</p>
-        <h2>Physics</h2>
-        Physics is my main passion. Ever since I was a small kid I liked discovering the mysteries of the world around me. I loved staring at the night sky and reading about planets and stars and stuff like that. Nowadays, I am constantly competing at the Physics Olympiads and Contests hosted in my country, and I have gathered some good results throught the years. I'll describe them succintly: #1 at the Local Olympiad in Grade 6, the "Procopiu" award at "Stefan Procopiu" National Contest (teams section), #1 at the County Olympiad in Grade 7, Honorable Mention at "Evrika" National Contest in Grade 7, Bronze Medal at the National Physics Olympiad in Grade 7, #3rd award at "Isaac Newton" National Contest and my latest achievement is #1 at the Local Olympiad in Grade 8 (last month, actually).
+    		<h1 id="top">Hi!</h1>
+        	<p style="display: inline;">I'm Mr. Xcoder, a 14-year old teen from Romania, with a lot of interests ranging from Physics to Programming and <a href="https://en.wikipedia.org/wiki/Code_golf">Code Golf</a>. I am <a href="https://codegolf.stackexchange.com/users/59487/mr-xcoder?tab=profile">an avid user of PPCG</a>, and I like hanging around in its chatroom, <a href="https://chat.stackexchange.com/rooms/240/the-nineteenth-byte">The Nineteenth Byte</a>. If you want to contact me, leave a ping there (<code>@Mr.Xcoder</code>).</p>
+       		<h2>Programming</h2>
+        	<h3>Swift</h3>
+        	<p>I was about 12 when I started programming. The first language I have learnt is Swift, and I have been using that exclusively for over a year. That taught me how to build apps for iOS, my favoruite platform.</p>
+        	<h3>Python</h3>
+        	<p>Then I discovered Python, which is (in my opinion) a great programming language, with a lot of useful features and built-ins. Another advantage of Python is that it's easy to use, the community of Python developers is huge, and its documentation is very well-built.</p>
+        	<h3>C / C++</h3>
+        	<p>I have been forced to learn C++ in school, and although I find it incredibly boring and primitive, it has helped me improve when it comes to algorithm construction.  C, on the other hand, is IMO a nice language that is very good for large computations and for fast code.</p>
+        	<h3>Esolangs</h3>
+        	<p>I know quite a few of these... Jelly, 05AB1E, Pyth, Pyke, Gaia, Husk, Enlist and many more! I currently aim to learn Brachylog or Japt. You can see my work with esolangs on PPCG.</p>
+        	<h2>Physics</h2>
+        	<p>Physics is my main passion. Ever since I was a small kid I liked discovering the mysteries of the world around me. I loved staring at the night sky and reading about planets and stars and stuff like that. Nowadays, I am constantly competing at the Physics Olympiads and Contests hosted in my country, and I have gathered some good results throught the years. I'll describe them succintly: #1 at the Local Olympiad in Grade 6, the "Procopiu" award at "Stefan Procopiu" National Contest (teams section), #1 at the County Olympiad in Grade 7, Honorable Mention at "Evrika" National Contest in Grade 7, Bronze Medal at the National Physics Olympiad in Grade 7, #3rd award at "Isaac Newton" National Contest and my latest achievement is #1 at the Local Olympiad in Grade 8 (last month, actually).</p>
   	</div>
+    	<p><font size=1;><a href="https://github.com/Mr-Xcoder/mr-xcoder.github.io">(View this project on Github!)</a></font></p>
     <script>
     function appear(elm, i, step, speed){
     	var t_o;
@@ -73,5 +74,3 @@
     </script>
   </body>
 </html>
-
-
