Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ li a:active {
 
 <h1 align="center">Mr. Xcoder's Realm</h1>
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="./">Home</a></li>
   <li><a href="./social">Social</a></li>
   <li><a href="./achievements">Achievements</a></li>
   <li><a href="./programming">Programming</a></li>
@@ -67,3 +67,4 @@ li a:active {
 
 </body>
 </html>
+
