--- a/social.html
+++ b/social.html
@@ -58,10 +58,10 @@ li a:active {
 
 <h1 align="center">Mr. Xcoder's Realm</h1>
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="./">Home</a></li>
   <li><a href="./social">Social</a></li>
   <li><a href="./achievements">Achievements</a></li>
-  <li><a href="./programming">Programming</a></li>
+  <li><a class="active" href="./programming">Programming</a></li>
 </ul>
 <p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to esoteric programming.</p>
 
