--- a/achievements.html
+++ b/achievements.html
@@ -3,6 +3,7 @@
 <head>
 <title>Mr. Xcoder's Realm</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 <style>
 body {
