--- a/social.html
+++ b/social.html
@@ -3,57 +3,8 @@
 <head>
 <title>Mr. Xcoder's Realm</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="stylesheet.css">
 </head>
-<style>
-body {
-    background-color: #202020;
-    margin: 10px;
-    color: #d2d2d2;
-    font-family: sans-serif;
-    max-width: 750px;
-    font-size: 18px;
-    line-height: 1.5;
-    padding: 20px 0px;
-}
-
-a:link, a:visited  {
-    text-decoration: none;
-    color: #b5dc46;
-}
-
-a:hover, a:active {
-    text-decoration: none;
-	color: #c9dc46;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #555555;
-}
-
-li a:active {
-	background-color: #333333;
-}
-</style>
 <body>
 
 <h1 align="center">Mr. Xcoder's Realm</h1>
