--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <li><a href="./achievements">Achievements</a></li>
   <li><a href="./programming">Programming</a></li>
 </ul>
-<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to esoteric programming.</p>
+<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to <a href="https://en.wikipedia.org/wiki/Esoteric_programming_language">esoteric programming</a>.</p>
 
 </body>
 </html>
