--- a/social.html
+++ b/social.html
@@ -8,14 +8,17 @@
 <body>
 
 <h1 align="center">Mr. Xcoder's Realm</h1>
-<ul>
+<ul class="menu">
   <li><a href="./">Home</a></li>
   <li><a class="active" href="./social">Social</a></li>
   <li><a href="./achievements">Achievements</a></li>
   <li><a href="./programming">Programming</a></li>
 </ul>
-<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to esoteric programming.</p>
-
+<p>You can contact me via any of the following methods:</p>
+<p align="center">• &nbsp;Github (<a href="https://github.com/Mr-Xcoder"><code>Mr-Xcoder</code></a>)</p>
+<p align="center">• &nbsp;Discord (<code>Mr. Xcoder, #3171</code>)</p>
+<p align="center">• &nbsp;Email (<code>vdxcoder123@gmail.com</code>)</p>
+<p align="center">• &nbsp;Stack Exchange Chat (<a href="https://chat.stackexchange.com/users/268674/mr-xcoder"><code>Mr. Xcoder</code></a>)</p>
 </body>
 </html>
 
