--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
   <li><a href="./achievements">Achievements</a></li>
   <li><a href="./programming">Programming</a></li>
 </ul>
-<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to <a href="https://en.wikipedia.org/wiki/Esoteric_programming_language">esoteric programming</a>.</p>
+<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to <a href="https://en.wikipedia.org/wiki/Esoteric_programming_language">esoteric programming</a>. The flair below is some sort of illustration of what I like:</p>
 
+<center><a href="https://stackexchange.com/users/8349457">
+<img src="https://stackexchange.com/users/flair/8349457.png?theme=dark" width="208" height="58" alt="profile for Mr. Xcoder on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="Mr. Xcoder's profile flair on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+</a></center>
+
+<p><b>Avid user of <a href="https://codegolf.stackexchange.com/questions">Programming Puzzles &amp; Code Golf</a></b> – Unlike other Stack Exchange sites, PPCG is a place where people write challenges and gifted programmers or nerds write some obfuscated solutions just for fun. Come join us!</p>
+
+<p><b>Somewhat active user of <a href="https://math.stackexchange.com/questions">Mathematics.SE</a></b> – A site full of brilliant people, ready to help when you encounter difficulties. This site is an awsome reference, with questions and answers from nearly any branch of math.</p>
+
+<p><b>Ocasionally hanging around <a href="https://puzzling.stackexchange.com/questions">Puzzling</a></b> – Similar to PPCG, this site is a collection of riddles and puzzles of varying difficulty. The users of this site never stop surprising me with their skills.</p>
+
+<p><b>Retried user of <a href="https://www.stackoverflow.com">Stack Overflow</a></b> – The older questions on this programming Q&amp;A site serve as a good reference for anyone willing to learn how to code. Unfortunately, over the last years, the quality of the questions and answers from SO has dropped significantly, and now everything feels like a massive rep-grab. What a shame!</p>
 </body>
 </html>
-
