--- a/social.html
+++ b/social.html
@@ -15,10 +15,10 @@
   <li><a href="./programming">Programming</a></li>
 </ul>
 <p>You can contact me via any of the following methods:</p>
-<p>Github (<a href="https://github.com/Mr-Xcoder"><code>Mr-Xcoder</code></a>)</p>
-<p>Discord (<code>Mr. Xcoder, #3171</code>)</p>
-<p>Email (<code>vdxcoder123@gmail.com</code>)</p>
-<p>Stack Exchange Chat (<a href="https://chat.stackexchange.com/users/268674/mr-xcoder"><code>Mr. Xcoder</code></a>)</p>
+<p>&nbsp;&nbsp;&nbsp;Github (<a href="https://github.com/Mr-Xcoder"><code>Mr-Xcoder</code></a>)</p>
+<p>&nbsp;&nbsp;&nbsp;Discord (<code>Mr. Xcoder, #3171</code>)</p>
+<p>&nbsp;&nbsp;&nbsp;Email (<code>vdxcoder123@gmail.com</code>)</p>
+<p>&nbsp;&nbsp;&nbsp;Stack Exchange Chat (<a href="https://chat.stackexchange.com/users/268674/mr-xcoder"><code>Mr. Xcoder</code></a>)</p>
 </body>
 </html>
 
