--- a/achievements.html
+++ b/achievements.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Mr. Xcoder's Realm</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-<body>
 
-<h1 align="center">Mr. Xcoder's Realm</h1>
-<ul>
-  <li><a href="./">Home</a></li>
-  <li><a href="./social">Social</a></li>
-  <li><a class="active" href="./achievements">Achievements</a></li>
-  <li><a href="./programming">Programming</a></li>
-</ul>
-<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to esoteric programming.</p>
+  <head>
+    <title>Mr. Xcoder's Realm</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
 
-</body>
+  <body>
+
+    <h1 align="center">Mr. Xcoder's Realm</h1>
+    <ul>
+      <li><a href="./">Home</a></li>
+      <li><a href="./social">Social</a></li>
+      <li><a class="active" href="./achievements">Achievements</a></li>
+      <li><a href="./programming">Programming</a></li>
+    </ul>
+    <p>I always had a passion for learning new things and discovering the "mysteries" of the world around me. In primary school, I was mostly interested in mathematics, which eventually brought me a couple of prizes at local contests and olympiads. After the sixth grade, I partially left math behind and started rigorously learning Physics. With the help of my colleagues and my wonderful professor, I realised that <i>it was worth it!</i> Here is a list of results I obtained over the years, sorted in chronological order (from the oldest to the most recent):</p>
+    <br/>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olympiad (6th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Top 10 at the <b>county olympiad (6th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Won the <b>Procopiu National Physics Contest – Teams (6th Grade)</b>, after having ranked #4 at the <b>county stage</b> of the same competition.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #7 at the <b>local olympiad (7th grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>county olympiad (7th grade)</b> and qualified to the <b>national phase</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Participated and received a honourable mention at <b>Evrika National Contest (7th grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th garde)</b> (the most notable result of mine so far).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th garde)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Coming soon: The county stage is on February 24th.</p>
+  </body>
+
 </html>
-
