--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       skills.
     </p>
 
-    <p><b>Retried user of <a href="https://www.stackoverflow.com">Stack Overflow</a></b> – The older questions on this programming Q&amp;A site serve as a good reference for anyone willing to learn how to code. Unfortunately, over the last years, the quality
+    <p><b>Retired user of <a href="https://www.stackoverflow.com">Stack Overflow</a></b> – The older questions on this programming Q&amp;A site serve as a good reference for anyone willing to learn how to code. Unfortunately, over the last years, the quality
       of the questions and answers from SO has dropped significantly, and now everything feels like a massive rep-grab. What a shame!</p>
   </body>
 
