--- a/achievements.html
+++ b/achievements.html
@@ -21,12 +21,12 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olympiad (6th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Top 10 at the <b>county olympiad (6th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Won the <b>Procopiu National Physics Contest – Teams (6th Grade)</b>, after having ranked #4 at the <b>county stage</b> of the same competition.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #7 at the <b>local olympiad (7th grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>county olympiad (7th grade)</b> and qualified to the <b>national phase</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Participated and received a honourable mention at <b>Evrika National Contest (7th grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th garde)</b> (the most notable result of mine so far).</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th garde)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #7 at the <b>local olympiad (7th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>county olympiad (7th Grade)</b> and qualified to the <b>national phase</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Participated and received a honourable mention at <b>Evrika National Contest (7th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th Grade)</b> (the most notable result of mine so far).</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest (8th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Coming soon: The county stage is on February 24th.</p>
   </body>
 
