--- a/achievements.html
+++ b/achievements.html
@@ -27,7 +27,7 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th Grade)</b> (the most notable result of mine so far).</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>Coming soon: The county stage is on February 24th.</del> Awaiting the results.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<del>Coming soon: The county stage is on February 24th.</del> <del>Awaiting the results.</del> Ranked #4 with the second overall score (29 out of 30) at the <b>county olympiad (8th grade)</b> and qualified to the national phase.</p>
   </body>
 
 </html>
