--- a/achievements.html
+++ b/achievements.html
@@ -27,7 +27,7 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th Grade)</b> (the most notable result of mine so far).</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ranked <del>#4</del> #2 at the <b>county olympiad (8th grade)</b> and qualified to the <b>national phase</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ranked #2 at the <b>county olympiad (8th grade)</b> and qualified to the <b>national phase</b>.</p>
   </body>
 
 </html>
