--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="./achievements">Achievements</a></li>
       <li><a href="./programming">Programming</a></li>
     </ul>
-    <p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to <a href="https://en.wikipedia.org/wiki/Esoteric_programming_language">esoteric programming</a>.
+    <p>Hi, I'm Mr. Xcoder, a high school teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to <a href="https://en.wikipedia.org/wiki/Esoteric_programming_language">esoteric programming</a>.
       The flair below is some sort of illustration of what I like:</p>
 
     <center><a href="https://stackexchange.com/users/8349457">
