--- a/programming.html
+++ b/programming.html
@@ -14,8 +14,7 @@
   <li><a href="./achievements">Achievements</a></li>
   <li><a class="active" href="./programming">Programming</a></li>
 </ul>
-<p>Hi, I'm Mr. Xcoder, a 14-year old teen from <a href="https://en.wikipedia.org/wiki/Romania">Romania</a>, with interests ranging from science and mathematics to esoteric programming.</p>
-
+  <h2>Uh oh!... This page is in progress... for now!</h2>
 </body>
 </html>
 
