--- a/achievements.html
+++ b/achievements.html
@@ -30,6 +30,7 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #2 at the <b>county olympiad (8th grade)</b> and qualified to the <b>national phase</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal <sup>(again...)</sup> at the <b>National Physics Olypiad (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the second prize at the <b>County Olympiad of Junior Sciences (Biology, Chemistry and Physics)</b> and qualified to the <b>national phase</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hopefully, more will be added to this list soon! Currently studying intensively in the fields of Physics, Astronomy, Astrophysics and Earth Sciences and looking forward to participating in the competitions to come.</p>
   </body>
 
 </html>
