--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p><b>Somewhat active user of <a href="https://math.stackexchange.com/questions">Mathematics.SE</a></b> – A site full of brilliant people, ready to help when you encounter difficulties. This site is an awsome reference, with questions and answers from
       nearly any branch of math.</p>
 
-    <p><b>Ocasionally hanging around <a href="https://puzzling.stackexchange.com/questions">Puzzling</a></b> – Similar to PPCG, this site is a collection of riddles and puzzles of varying difficulty. The users of this site never stop surprising me with their
+    <p><b>Occasionally hanging around <a href="https://puzzling.stackexchange.com/questions">Puzzling</a></b> – Similar to PPCG, this site is a collection of riddles and puzzles of varying difficulty. The users of this site never stop surprising me with their
       skills.
     </p>
 
