--- a/achievements.html
+++ b/achievements.html
@@ -31,6 +31,7 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal <sup>(again...)</sup> at the <b>National Physics Olypiad (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the second prize at the <b>County Olympiad of Junior Sciences (Biology, Chemistry and Physics)</b> and qualified to the <b>national phase</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #2 at the <b>local olympiad (9th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the III<sup>rd</sup> prize at the <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography) (9th Grade)</b>, receiving full marks in physics; however, not being interested about chemistry in general was a drawback...</p>
   </body>
 
 </html>
