--- a/achievements.html
+++ b/achievements.html
@@ -25,10 +25,10 @@
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>county olympiad (7th Grade)</b> and qualified to the <b>national phase</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Participated and received a honourable mention at <b>Evrika National Contest (7th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th Grade)</b></p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton national contest (8th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton National Contest (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Obtained the second score at the <b>county olympiad (8th grade)</b> and qualified to the <b>national phase</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal <sup>(again...)</sup> at the <b>National Physics Olypiad (8th Grade)</b>.</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal <sup>(again...)</sup> at the <b>National Physics Olympiad (8th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the second prize at the <b>County Olympiad of Junior Sciences (Biology, Chemistry and Physics)</b> and qualified to the <b>national phase</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #2 at the <b>local olympiad (9th Grade)</b>.</p>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the III<sup>rd</sup> prize at the <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography) (9th Grade)</b>, receiving full marks in physics; however, not being interested about chemistry in general was a drawback...</p>
