--- a/achievements.html
+++ b/achievements.html
@@ -5,6 +5,21 @@
     <title>Mr. Xcoder's Realm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid white;
+        border-collapse: collapse;
+      }
+
+      th,
+      td {
+        padding: 5px;
+        text-align: left;
+      }
+
+    </style>
   </head>
 
   <body>
@@ -16,22 +31,78 @@
       <li><a class="active" href="./achievements">Achievements</a></li>
       <li><a href="./programming">Programming</a></li>
     </ul>
-    <p>I always had a passion for learning new things and discovering the "mysteries" of the world around me. In primary school, I was mostly interested in mathematics, which eventually brought me a couple of prizes at local contests and olympiads. After the sixth grade, I partially left math behind and started rigorously learning Physics. With the help of my colleagues and my wonderful professor, I realised that <i>it was worth it!</i> Here is a list of results I obtained over the years, sorted in chronological order (from the oldest to the most recent):</p>
-    <br/>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olympiad (6th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Top 10 at the <b>county olympiad (6th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Won the <b>Procopiu National Physics Contest – Teams (6th Grade)</b>, after having ranked #4 at the <b>county stage</b> of the same competition.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #7 at the <b>local olympiad (7th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>county olympiad (7th Grade)</b> and qualified to the <b>national phase</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Participated and received a honourable mention at <b>Evrika National Contest (7th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal at the <b>National Physics Olypiad (7th Grade)</b></p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #5 at the <b>Isaac Newton National Contest (8th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #1 at the <b>local olypiad (8th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Obtained the second score at the <b>county olympiad (8th grade)</b> and qualified to the <b>national phase</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received a bronze medal <sup>(again...)</sup> at the <b>National Physics Olympiad (8th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the second prize at the <b>County Olympiad of Junior Sciences (Biology, Chemistry and Physics)</b> and qualified to the <b>national phase</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ranked #2 at the <b>local olympiad (9th Grade)</b>.</p>
-    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Received the III<sup>rd</sup> prize at the <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography) (9th Grade)</b>, receiving full marks in physics; however, not being interested about chemistry in general was a drawback...</p>
+    <p>I always had a passion for learning new things and discovering the "mysteries" of the world around me. In primary school, I was mostly interested in mathematics, which eventually brought me a couple of prizes at local contests and olympiads. After
+      the sixth grade, I partially left math behind and started rigorously learning Physics. With the help of my colleagues and my wonderful professor, I realised that <i>it was worth it!</i> Here is a list of results I obtained over the years, sorted
+      in chronological order (from the oldest to the most recent), where <b>LPhO</b> – Physics Olympiad - local phase, <b>CPhO</b> – Physics Olympiad - county phase, <b>NPhO</b> – Physics Olypiad, national phase:</p>
+
+
+    <table>
+      <tr>
+        <th style="width:100px;">Year</th>
+        <th>Competition</th>
+      </tr>
+      <tr>
+        <th rowspan="3">2015-2016 (6<sup>th</sup> Grade)</th>
+        <td>#1 – LPhO</td>
+      </tr>
+      <tr>
+        <td>Top 10 – CPhO</td>
+      </tr>
+      <tr>
+        <td>Won the <b>Procopiu National Physics Contest (Teams)</b></td>
+      </tr>
+
+      <tr>
+        <th rowspan="4">2016-2017 (7<sup>th</sup> Grade)</th>
+        <td>#7 – LPhO</td>
+      </tr>
+      <tr>
+        <td>#1 – CPhO, qualified to NPhO</td>
+      </tr>
+      <tr>
+        <td>Honourable Mention – <b>Evrika National Physics Contest</b></td>
+      </tr>
+
+      <tr>
+        <td>
+          Bronze medal (#20) – NPhO
+        </td>
+      </tr>
+
+
+      <tr>
+        <th rowspan="5">2017-2018 (8<sup>th</sup> Grade)</th>
+        <td>#5 – <b>Isaac Newton Nation Physics Contest</b></td>
+      </tr>
+      <tr>
+        <td>#1 – LPhO</td>
+      </tr>
+      <tr>
+        <td>#4 – CPhO, qualified to NPhO</td>
+      </tr>
+
+      <tr>
+        <td>
+          Bronze medal (#36) – NPhO
+        </td>
+      </tr>
+      <tr>
+        <td>
+          #3 – <b>County Olympiad of Junior Sciences (Biology, Chemistry, Physics)</b> (#1 – Physics Section) and qualified to the national phase; I was unable to participate due to an unfortunate event, though
+        </td>
+      </tr>
+      <tr>
+        <th rowspan="2">2018-2019 (9<sup>th</sup> Grade)</th>
+        <td>#2 – LPhO</td>
+      </tr>
+      <tr>
+        <td>
+          III<sup>rd</sup> prize – <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography)</b> (#1 with full marks – Physics Section), but not being interested about chemistry in general was a drawback...
+        </td>
+      </tr>
+    </table>
+
   </body>
 
 </html>
+
