--- a/achievements.html
+++ b/achievements.html
@@ -72,7 +72,7 @@
 
       <tr>
         <th rowspan="5">2017-2018 (8<sup>th</sup> Grade)</th>
-        <td>#5 – <b>Isaac Newton Nation Physics Contest</b></td>
+        <td>#5 – <b>Isaac Newton National Physics Contest</b></td>
       </tr>
       <tr>
         <td>#1 – LPhO</td>
