--- a/achievements.html
+++ b/achievements.html
@@ -85,7 +85,7 @@
         <td>
           Bronze medal (#36) – NPhO
         </td>
-      </tr>
+      </tr> 
       <tr>
         <td>
           #3 – <b>County Olympiad of Junior Sciences (Biology, Chemistry, Physics)</b> (#1 – Physics Section) and qualified to the national phase; I was unable to participate due to an unfortunate event, though
@@ -98,6 +98,11 @@
       <tr>
         <td>
           III<sup>rd</sup> prize – <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography)</b> (#1 with full marks – Physics Section), but not being interested about chemistry in general was a drawback...
+        </td>
+      </tr>
+      <tr>
+        <td>
+          #1 – CPhO, qualified to NPhO
         </td>
       </tr>
     </table>
