--- a/achievements.html
+++ b/achievements.html
@@ -88,11 +88,11 @@
       </tr> 
       <tr>
         <td>
-          #3 – <b>County Olympiad of Junior Sciences (Biology, Chemistry, Physics)</b> (#1 – Physics Section) and qualified to the national phase; I was unable to participate due to an unfortunate event, though
+          #3 – <b>Olympiad of Junior Sciences (Biology, Chemistry, Physics) – County stage</b> (#1 – Physics Section) and qualified to the national phase; I was unable to participate due to an unfortunate event, though
         </td>
       </tr>
       <tr>
-        <th rowspan="3">2018-2019 (9<sup>th</sup> Grade)</th>
+        <th rowspan="4">2018-2019 (9<sup>th</sup> Grade)</th>
         <td>#2 – LPhO</td>
       </tr>
       <tr>
@@ -103,6 +103,11 @@
       <tr>
         <td>
           #1 – CPhO, qualified to NPhO
+        </td>
+      </tr>
+      <tr>
+        <td>
+          #7 – <b>Mathematics Olympiad – County stage</b>
         </td>
       </tr>
     </table>
