--- a/achievements.html
+++ b/achievements.html
@@ -97,7 +97,7 @@
       </tr>
       <tr>
         <td>
-          III<sup>rd</sup> prize – <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography)</b> (#1 with full marks – Physics Section), but not being interested about chemistry in general was a drawback...
+          III<sup>rd</sup> prize – <b>Earth Science Olympiad (Physics, Chemistry, Biology and Geography) – County stage</b> (#1 with full marks – Physics Section), but not being interested about chemistry in general was a drawback...
         </td>
       </tr>
       <tr>
