--- a/achievements.html
+++ b/achievements.html
@@ -92,7 +92,7 @@
         </td>
       </tr>
       <tr>
-        <th rowspan="4">2018-2019 (9<sup>th</sup> Grade)</th>
+        <th rowspan="5">2018-2019 (9<sup>th</sup> Grade)</th>
         <td>#2 – LPhO</td>
       </tr>
       <tr>
@@ -108,6 +108,11 @@
       <tr>
         <td>
           #7 – <b>Mathematics Olympiad – County stage</b>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Update May 7th: Silver Medal (#14) + Distinction from the Romanian Ministry of Education — NPhO
         </td>
       </tr>
     </table>
