--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <img src="https://stackexchange.com/users/flair/8349457.png?theme=dark" width="208" height="58" alt="profile for Mr. Xcoder on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="Mr. Xcoder's profile flair on Stack Exchange, a network of free, community-driven Q&amp;A sites">
 </a></center>
 
-    <p><b>Avid user of <a href="https://codegolf.stackexchange.com/questions">Programming Puzzles &amp; Code Golf</a></b> – Unlike other Stack Exchange sites, PPCG is a place where people write challenges and gifted programmers or nerds write some obfuscated
+    <p><b>Avid user of <a href="https://codegolf.stackexchange.com/questions">Code Golf &amp; Coding Challenges</a></b> – Unlike other Stack Exchange sites, PPCG is a place where people write challenges and gifted programmers or nerds write some obfuscated
       solutions just for fun. Come join us!</p>
 
     <p><b>Somewhat active user of <a href="https://math.stackexchange.com/questions">Mathematics.SE</a></b> – A site full of brilliant people, ready to help when you encounter difficulties. This site is an awsome reference, with questions and answers from
